<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/liner_layout_shape"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/item_email_title"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/item_email_email_hint"
            android:inputType="textEmailAddress"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_new_pwd"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:hint="@string/item_email_new_pwd_hint"
                android:inputType="textPassword"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:background="@drawable/common_btn_selector"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:text="@string/item_email_verify_txt"
                android:textColor="@color/common_white" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_refresh"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/common_circle_btn_selector"
            android:text="@string/item_email_refresh_txt"
            android:textColor="@color/common_white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="end"
            android:text="@string/item_email_hint"
            android:textColor="@color/common_line" />
    </LinearLayout>
</LinearLayout>
