<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="25dp"
            android:src="@mipmap/common_logo" />

        <LinearLayout
            android:id="@+id/ll_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_logo"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <com.cxyz.commons.widget.ClearEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/main_login_et_background"
                android:drawableLeft="@mipmap/username"
                android:drawablePadding="8dp"
                android:hint="请输入学号"
                android:padding="8dp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/main_login_et_background"
                android:drawableLeft="@mipmap/password"
                android:drawablePadding="8dp"
                android:hint="请输入密码"
                android:inputType="textPassword"
                android:padding="8dp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_input"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/rg_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_student"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/app_radio_btn_check_style"
                    android:checked="true"
                    android:text="@string/main_stu" />

                <RadioButton
                    android:id="@+id/rb_teacher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:button="@drawable/app_radio_btn_check_style"
                    android:drawablePadding="5dp"
                    android:text="@string/main_tea" />
            </RadioGroup>

            <TextView
                android:id="@+id/tv_forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/main_forget_pwd"
                android:textColor="@color/app_on" />
        </RelativeLayout>

        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_below="@id/rl_other"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/shape"
            android:text="登录"
            android:textColor="@color/app_white"
            android:textSize="18sp" />

    </RelativeLayout>


</LinearLayout>
